--- a/languages/uz.po
+++ b/languages/uz.po
@@ -11,14 +11,14 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Textdomain-Support: yesX-Generator: Poedit 1.6.4\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;esc_html_e;esc_html_x:1,2c;esc_html__;esc_attr_e;esc_attr_x:1,2c;esc_attr__;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_x:1,2c;_n:1,2;_n_noop:1,2;__ngettext:1,2;__ngettext_noop:1,2;_c,_nc:4c,1,2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Generator: Poedit 2.0.3\n"
 "Last-Translator: \n"
-"Language: uz\n"
+"Language: uz_UZ@latin\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: author.php:33
@@ -39,7 +39,6 @@ msgstr "Bu bo’lim uchun biror natija topilmadi."
 msgid "%s Comment"
 msgid_plural "%s Comments"
 msgstr[0] "%s izoh"
-msgstr[1] "%s izoh"
 
 #: comments.php:47 comments.php:115
 msgid "Comments"
@@ -99,7 +98,6 @@ msgstr "Asosiy teglar"
 msgid "%s Post"
 msgid_plural "%s Posts"
 msgstr[0] "%s maqola"
-msgstr[1] "%s maqola"
 
 #: header.php:39
 msgid "Return to VOA"
